Revert "Merge branch 'main' of https://github.com/isaiahpng/team6project"
This reverts commit bbd74d2d260166a6b90f5ea9feb3ba2197937af1, reversing
changes made to 821358a04dfef6a042c296ce67dcdff3b4246f8d.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "description": "1. `npm install -g npm`\r 2. `npm install express`\r 3. Next, `cd team6project-main` directory\r 4. `npm init`",
   "main": "C",
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "^C"
