Updates to make updateOrderWork
1 god is not enough, Need polytheism.....BAD

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ VSteam6Project/
 .vs/team6project/FileContentIndex/f2c27b98-e549-462a-8d65-8ba42760d55c.vsidx
 .vs/team6project/FileContentIndex/53a59ffa-736a-4987-a687-ed61940058c1.vsidx
 .vs/team6project/FileContentIndex/123f9ef3-be62-4b8b-995c-0994cf25a1fb.vsidx
+.vs/team6project/FileContentIndex/93832d28-e759-4499-b4b7-78f669f4ab8a.vsidx
+.vs/team6project/FileContentIndex/688e287c-d76e-4151-851b-efe7c0cd4716.vsidx
+.vs/team6project/FileContentIndex/b697ef4d-79b9-4a35-b67a-f359e9104518.vsidx
