working prepared setup user section done

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ DB_HOST=2024team6ds.mysql.database.azure.com
 DB_USER=serverAdminStepan
 DB_PASSWORD=mySQL4DS!
 DB_NAME=mydb
+JWT_SECRET=929b2501-e269-44a1-9a11-29916d9b21eb
