--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@ DB_HOST=2024team6ds.mysql.database.azure.com
 DB_USER=serverAdminStepan
 DB_PASSWORD=mySQL4DS!
 DB_NAME=mydb
+
+# Email Configuration
+EMAIL_USER=Aisulu072004@gmail.com
+EMAIL_PASS=Adminpassword
+ADMIN_EMAIL=Aisulu072004@gmail.com
