--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "team6project",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
+    "nodemailer": "^6.9.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-backend": "node backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run start\" \"npm run start-backend\""
   },
   "eslintConfig": {
     "extends": [
@@ -39,15 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "1. `npm install -g npm`\r 2. `npm install express`\r 3. Next, `cd team6project-main` directory\r 4. `npm init`",
-  "main": "C",
-  "repository": {
-    "type": "git",
-    "url": "^C"
-  },
-  "keywords": [
-    "^CC^CCC''"
-  ],
-  "author": "c",
-  "license": "ISC"
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2"
+  }
 }
