--- a/backend/package.json
+++ b/backend/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "react-scripts test",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.16",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1"
+    "nodemailer": "^6.9.7",
+    "dotenv": "^16.3.1",
+    "ws": "^8.14.2",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
