--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
     "web-vitals": "^2.1.4",
     "ws": "^8.16.0"
   },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "start-backend": "node backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:backend": "jest --config backend/jest.config.js",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "dev": "concurrently \"npm run start\" \"npm run start-backend\""
   },
@@ -48,9 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.2"
   }
 }
