Revert "Merge branch 'main' of https://github.com/isaiahpng/team6project"
This reverts commit 03b67aca4e693d7994c2f26a50eac3051c68c603, reversing
changes made to 04e04da8d5a593f213c2a85e3eb2e67d9b9b8bba.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
 node_modules
+.vs/team6project/FileContentIndex/13b63cf2-30df-4cc1-b533-58d68b0acbec.vsidx
+.vs/team6project/FileContentIndex/15fe5ede-f304-4d1a-8d93-05eb61311106.vsidx
+.vs/team6project/FileContentIndex/3eb3e782-9cdc-4dff-8b13-78f9bf4895b4.vsidx
+.vs/team6project/v17/.wsuo
+.vs/team6project/v17/DocumentLayout.backup.json
+.vs/team6project/v17/DocumentLayout.json
+.vs/team6project/v17/TestStore/0/000.testlog
+.vs/team6project/v17/TestStore/0/testlog.manifest
+.vs/VSWorkspaceState.json
+VSteam6Project/
+.vs/team6project/FileContentIndex/3c262c49-5c89-405b-946f-072931525faf.vsidx
+.vs/ProjectSettings.json
+.vs/slnx.sqlite
+.vs/team6project/FileContentIndex/58060f73-bcb5-458e-a5dd-e3ec61e79a67.vsidx
+.vs/team6project/FileContentIndex/2983949e-4d74-42b7-8fbb-ff202c333a89.vsidx
+.vs/team6project/FileContentIndex/6f2c88d8-334e-4d66-bcdf-aeff2c36c02d.vsidx
+.vs/team6project/FileContentIndex/f98a6f4f-9e82-45cd-82fc-a3da2e7b7b85.vsidx
+.vs/team6project/FileContentIndex/3d7e6921-1bea-4004-922f-66e2218ba442.vsidx
+.vs/team6project/FileContentIndex/8ddc75d1-0e57-42e6-bbfb-a48cf7d8eb12.vsidx
+.vs/team6project/FileContentIndex/668eccd3-2d44-4cce-b59e-2338052195fc.vsidx
+.vs/team6project/FileContentIndex/67705149-3a04-4e57-8e0f-8eb2437bb19d.vsidx
+.vs/team6project/FileContentIndex/861f0c30-afe1-41e1-846d-ccb6f50fc195.vsidx
+.vs/team6project/FileContentIndex/5ba0b5e4-dbcf-482c-929a-2426b027742d.vsidx
+.vs/team6project/FileContentIndex/b2e8ca47-b43a-43c3-a498-62fb968b4b97.vsidx
+.vs/team6project/FileContentIndex/210a82a5-5f43-436c-bb35-487087bbe8fa.vsidx
+.vs/team6project/FileContentIndex/b1cd9e44-aa94-4dd8-99ae-34ecb812b2b2.vsidx
+.vs/team6project/FileContentIndex/56a7d252-f972-4c7f-8cde-61a1813b4802.vsidx
+.vs/team6project/FileContentIndex/06371088-0959-4d53-9d16-abd5013c57d4.vsidx
+.vs/team6project/FileContentIndex/cb5c74b0-ed93-4470-b6f0-8dfa48efebcd.vsidx
+.vs/team6project/FileContentIndex/376f554d-445a-4e7b-8c90-d9a949cc12ac.vsidx
+.vs/team6project/FileContentIndex/1f011ec3-27ac-4350-bce2-865667caa235.vsidx
+.vs/team6project/FileContentIndex/585b98b4-54c6-4d73-a4f8-0869c7e72876.vsidx
+.vs/team6project/FileContentIndex/dbdf638c-1ca3-4eb3-8d50-9b0d4ecb7a31.vsidx
+.vs/team6project/FileContentIndex/1cf049d3-0434-4510-bf05-177e20147c81.vsidx
+.vs/team6project/FileContentIndex/f2c27b98-e549-462a-8d65-8ba42760d55c.vsidx
+.vs/team6project/FileContentIndex/53a59ffa-736a-4987-a687-ed61940058c1.vsidx
+.vs/team6project/FileContentIndex/123f9ef3-be62-4b8b-995c-0994cf25a1fb.vsidx
